--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
+
 body {
     /* Can alternatively define in html {} or :root {} */
     color:;
@@ -11,4 +13,7 @@ body {
 .App{
     min-height: 100vh;
     display: flex;
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    background-position: center;
 }
